photo file manipulation 4

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./bn_only_gold_transparent.png" />
+    <link rel="icon" type="image/svg+xml" href="/public/bn_only_gold_transparent.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Beautiful Nightmares</title>
   </head>
